<resources>
    <string name="app_name">Fly Car</string>

    <string name="login">Sign in</string>

    <string name="create_account">Create Account</string>
    <string name="email_address">Login</string>
    <string name="password">Password</string>

    <string name="email_imm">Serial number</string>

    <string name="next_screen">Next</string>

    <string name="title_activity_camera">CameraActivity</string>
<string name="dummy_button">Dummy Button</string>
<string name="dummy_content">DUMMY\nCONTENT</string>
<string name="take_picture">Take Picture</string>
<string name="request_permission">This sample needs camera permission.</string>
<string name="camera_error">This device doesn\'t support Camera2 API.</string>
<string name="mandatory_pictures">Mandatory Pictures</string>
<string name="additional_pictures">Additional Pictures</string>

</resources>
